# AceBallisticsExtended

./: .actrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .shellcheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  abe_test_runner.sqf  build.sh  deny.toml  meta.cpp  mkdocs.yml  mod.cpp  rustfmt.toml
ext/: Cargo.toml  build.rs
ext/benches/: BENCHMARK.md  bench_main.rs  fragmentation.rs
ext/examples/: trajectory_table.rs
ext/scripts/: update_frag_mass.py
ext/src/: aerodynamic_jump.rs  aps.rs  atmosphere.rs  ballistic_cap.rs  barrel_harmonics.rs  barrier_penetration.rs  behind_armor_debris.rs  body_armor.rs  component_damage.rs  config.rs  degradation.rs  dispersion.rs  dof.rs  drag.rs  dynamic_armor.rs  exterior.rs  fragmentation.rs  frangible_ammo.rs  frozen_ground.rs  heat_penetration.rs  interior.rs  interior_wall.rs  laser_solution.rs  lib.rs  long_rod.rs  moving_target_lead.rs  multi_bounce.rs  penetration.rs  platform_pitch_yaw.rs  reticle_conversion.rs  security_glass.rs  sequential_hits.rs  soft_tissue.rs  stability.rs  tire_penetration.rs  tracer_burnout.rs  underwater.rs  wind_uncertainty.rs  zero_manager.rs
ext/src/ballistics/: atmosphere.rs  ballistic_cap.rs  barrel_harmonics.rs  dof.rs  drag.rs  interior.rs  mod.rs  mv_temperature.rs
ext/src/effects/: babt.rs  backsplash.rs  body_armor.rs  bone_penetration.rs  combined_effects.rs  component_damage.rs  component_kill_prob.rs  crew_injury.rs  degradation.rs  fire_propagation.rs  floor_ceiling.rs  frangible_ammo.rs  frozen_ground.rs  ground_skip.rs  hydraulic_shock.rs  interior_wall.rs  mod.rs  nijij_reference.rs  (+6 more)
ext/tests/: ace3_compat_test.rs  ammo_data_format_test.rs  apfsds_calibration.rs  armor_data_format_test.rs  cabi_identity_test.rs  cross_validation.rs  edge_case_tests.rs  empirical_validation.rs  full_validation.rs  pbo_coverage.rs  penetration_calibration.rs  property_tests.proptest-regressions  property_tests.rs  reference_trajectories.rs  sqf_compat_test.rs  sqf_simulation.rs  verify_simulations.rs
ext/tools/: add_twist_rate.py  bc_reference.md  convert_arma_weapons.py  fit_de_marre_k.py  infer_bc.py
ext/validation/: pyproject.toml  validate_exterior.py  validate_full.py
(+3806 files in other folders)
