[package]
name = "abe_ballistics_ext"
version = "0.1.0"
edition = "2024"
description = "Advanced Ballistics Extension - Rust physics engine for ARMA 3"
license = "GPL-3.0-only"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.48"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
glob = "0.3"
proptest = "1"

[dev-dependencies.criterion]
version = "0.7"
features = ["html_reports"]

[[bench]]
name = "bench_main"
harness = false

[[bench]]
name = "fragmentation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
