[package]
name = "abe_ballistics_ext"
version = "0.1.0"
edition = "2024"
description = "Advanced Ballistics Extension - Rust physics engine for ARMA 3"
license = "GPL-3.0-only"
rust-version = "1.96"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.48"
phf = { version = "0.11", features = ["macros"] }
csv = "1"
itertools = "0.14"

[dev-dependencies]
glob = "0.3"
proptest = "1"
rayon = "1"
ndarray = "0.16"
plotters = "0.3"
ballistics-engine = "0.27.1"

[dev-dependencies.criterion]
version = "0.7"
features = ["html_reports"]

[[bench]]
name = "bench_main"
harness = false

[[bench]]
name = "fragmentation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
